tests/ui/const-generics/different_generic_args_array.stderr
error[E0308]: mismatched types
  --> $DIR/different_generic_args_array.rs:9:9
   |
LL |     x = Const::<{ [4] }> {};
   |         ^^^^^^^^^^^^^^^^^^^ expected `[3]`, found `[4]`
   |
   = note: expected struct `Const<[3]>`
              found struct `Const<[4]>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
